# IPI

./: .gitignore  README.md  agent.md  agent_context.md  current_task.md  experiment-tracker.html  experiment.md  instructions.md  paper_review_instructions_detailed.md  setup.md  top_tier_experiment_collection.md
api/: README.md
benchmarks/v2x/: README.md  sources.json
cpp/: CMakeLists.txt  LOGIC.md  README.md
cpp/examples/: README.md  mocar_ipi_demo.c  ros2_bsm_broadcaster.cpp
cpp/examples/device/: mocar_ipi_demo.c  spat_tcp_bridge.cpp
cpp/include/ipi/api/: edge4av_interface.hpp  experiment_logging.hpp  j2735_payload_codec.hpp  minimal_mqtt_client.hpp  private_5g_latency_probe.hpp  private_session_transport.hpp  receiver.hpp  sender.hpp  types.hpp
cpp/include/ipi/common/: debug.hpp
cpp/include/ipi/core/: ipi_cooperative_service.hpp  ipi_service_request.hpp  message_frame.hpp  validation.hpp
cpp/include/ipi/mesh/: mesh_manager.hpp  task_offloader.hpp
cpp/include/ipi/v2x/: j2735_messages.hpp  ros2_bridge.hpp  uper_codec.hpp
cpp/src/api/: edge4av_interface.cpp  minimal_mqtt_client.cpp  private_5g_latency_probe.cpp  private_session_transport.cpp  receiver.cpp  sender.cpp  shared_state.cpp  shared_state.hpp
cpp/src/core/: ipi_cooperative_service.cpp  ipi_service_request.cpp  message_frame.cpp  validation.cpp
cpp/src/mesh/: mesh_manager.cpp  task_offloader.cpp
cpp/src/v2x/: j2735_messages.cpp  ros2_bridge.cpp  uper_codec.cpp
cpp/tests/: edge4av_interface_test.cpp  experiment_logging_test.cpp  private_5g_latency_loopback_test.cpp  private_5g_latency_mqtt_loopback_test.cpp  private_5g_latency_probe_test.cpp  private_session_transport_test.cpp  test_support.hpp
references/: Function Design Document for Intersection Programming Interface (IPI).docx  Supported Applications Document for Intersection Programming Interface (IPI).docx
results/: README.md
results/real_5g/: Signal.csv  Signal.ods  radio_latency_estimator_model.json  radio_latency_relationship.csv  run_locations_parsed.csv  run_signal_latency_summary.csv  signal_maps_summary.md  signal_measurements_parsed.csv
results/real_5g/20260513_sunny_fintechparking_run_1/: environment.md  large_payload_metadata.md  large_payload_ssh_temp_key_path.txt  large_payload_summary.md  mqtt_latency_metadata.md  mqtt_latency_resume_mib_metadata.md  mqtt_latency_ssh_temp_key_path.txt  mqtt_latency_summary.md  network_trial_metadata.md  p5g-mqtt-latency-payload-0_sender.csv  p5g-mqtt-latency-payload-0_sender.err  p5g-mqtt-latency-payload-1024_sender.csv  p5g-mqtt-latency-payload-1024_sender.err  p5g-mqtt-latency-payload-1048576_sender.csv  p5g-mqtt-latency-payload-1048576_sender.err  p5g-mqtt-latency-payload-1048576_sender.partial_stalled_20260513_161057.csv  p5g-mqtt-latency-payload-131072_sender.csv  p5g-mqtt-latency-payload-131072_sender.err  p5g-mqtt-latency-payload-16384_sender.csv  p5g-mqtt-latency-payload-16384_sender.err  p5g-mqtt-latency-payload-2097152_sender.csv  p5g-mqtt-latency-payload-2097152_sender.err  p5g-mqtt-latency-payload-256_sender.csv  p5g-mqtt-latency-payload-256_sender.err  p5g-mqtt-latency-payload-262144_sender.csv  p5g-mqtt-latency-payload-262144_sender.err  p5g-mqtt-latency-payload-32768_sender.csv  p5g-mqtt-latency-payload-32768_sender.err  p5g-mqtt-latency-payload-4096_sender.csv  p5g-mqtt-latency-payload-4096_sender.err  p5g-mqtt-latency-payload-524288_sender.csv  p5g-mqtt-latency-payload-524288_sender.err  p5g-mqtt-latency-payload-65536_sender.csv  p5g-mqtt-latency-payload-65536_sender.err  p5g-mqtt-latency-payload-8192_sender.csv  p5g-mqtt-latency-payload-8192_sender.err  p5g-mqtt-service-payload-0_sender.csv  p5g-mqtt-service-payload-0_sender.err  p5g-mqtt-service-payload-1024_sender.csv  p5g-mqtt-service-payload-1024_sender.err  (+41 more)
results/real_5g/20260514_sunny_after_rain_run_1/: environment.md  full_payload_sweep_metadata.md  mqtt_resume_from_262144_metadata.md  p5g-mqtt-service-payload-0_sender.csv  p5g-mqtt-service-payload-0_sender.err  p5g-mqtt-service-payload-1024_sender.csv  p5g-mqtt-service-payload-1024_sender.err  p5g-mqtt-service-payload-1048576_sender.csv  p5g-mqtt-service-payload-131072_sender.csv  p5g-mqtt-service-payload-131072_sender.err  p5g-mqtt-service-payload-16384_sender.csv  p5g-mqtt-service-payload-16384_sender.err  p5g-mqtt-service-payload-256_sender.csv  p5g-mqtt-service-payload-256_sender.err  p5g-mqtt-service-payload-262144_sender.csv  p5g-mqtt-service-payload-262144_sender.err  p5g-mqtt-service-payload-262144_sender.partial_sigpipe_20260514_163612.csv  p5g-mqtt-service-payload-32768_sender.csv  p5g-mqtt-service-payload-32768_sender.err  p5g-mqtt-service-payload-4096_sender.csv  p5g-mqtt-service-payload-4096_sender.err  p5g-mqtt-service-payload-524288_sender.csv  p5g-mqtt-service-payload-524288_sender.err  p5g-mqtt-service-payload-65536_sender.csv  p5g-mqtt-service-payload-65536_sender.err  p5g-mqtt-service-payload-8192_sender.csv  p5g-mqtt-service-payload-8192_sender.err  p5g-tcp-service-payload-0_sender.csv  p5g-tcp-service-payload-0_sender.err  p5g-tcp-service-payload-1024_sender.csv  p5g-tcp-service-payload-1024_sender.err  p5g-tcp-service-payload-1048576_sender.csv  p5g-tcp-service-payload-1048576_sender.err  p5g-tcp-service-payload-131072_sender.csv  p5g-tcp-service-payload-131072_sender.err  p5g-tcp-service-payload-16384_sender.csv  p5g-tcp-service-payload-16384_sender.err  p5g-tcp-service-payload-2097152_sender.csv  p5g-tcp-service-payload-2097152_sender.err  p5g-tcp-service-payload-256_sender.csv  (+18 more)
scripts/: analyze_edge4av_deadlines.py  build_detector_output_ipi_payloads.py  build_radio_latency_relationship.py  build_real5g_dashboard.py  build_real5g_paper_figures.py  build_run_signal_latency_summary.py  build_signal_strength_maps.py  build_v2x_ipi_payload_manifest.py  create_edge4av_experiment_suite.py  download_v2x_benchmarks.py  edge4av_loadgen.py  gps_topic_recorder.py  record_gps_for_experiment.sh  run_v2x_gpu_dataset_benchmark.py  run_v2x_ipi_loopback.py  run_v2x_radar_detector_benchmark.py
web/experiment-tracker/: app.js  index.html  styles.css
(+674 files in other folders)
